    realms configured.

    Add a replacement for krb5_cc_get_full_name for Kerberos libraries
    that don't have this function.  Fixes compilation against MIT Kerberos
    1.8 and earlier.

    Fix incorrect Perl module includes in pwchange.fcgi that prevented the
    WebLogin password change component from starting properly.

WebAuth 4.3.0 (2012-08-06)

    mod_webauth now sets the HttpOnly flag on all WebAuth session cookies
    by default.  This can be turned off at the server or virtual host
    level with the new WebAuthHttpOnly Apache directive.  (Although be
    aware that the structure of the WebAuth cookies is an internal
    implementation detail; if this directive is needed, the web site is
    probably doing something unsupported.)

    WebLogin now sets the HttpOnly flag on the single sign-on cookie, and
    on the test cookie used to probe whether cookies are supported.

    Add a new optional <userMessage> element to the specification of the
    <requestTokenResponse> reply from the WebKDC and a new error code.
    These are used to indicate a rejected authentication and to return an
    HTML error that should be displayed to the user.

    Support a new <error> return element inside the <authdata> reply from
    the user information service during WebLogin authentication.  Presence
    of this element indicates that the user information service has
    rejected this authentication.  The content is raw HTML content (which
    should be protected by a CDATA block in the XML) to display to the
    user.  Make appropriate changes to the webauth_user_info and
    webauth_webkdc_login APIs and to mod_webkdc to return this information
    via the new <userMessage> element and the new protocol error code.

    Add a new parameter, err_html, to the error page template in WebLogin.
    When this parameter is set, the contents should be used as the entire
    error message to display to the user.  Local WebLogin error templates